--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/bouquet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.mysql-connector.jar=..\\..\\..\\Downloads\\mysql-connector.jar\\mysql-connector.jar
+file.reference.mysql-connector.jar-1=mysql-connector.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector.jar}
+    ${file.reference.mysql-connector.jar}:\
+    ${file.reference.mysql-connector.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
