--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
-file.reference.mysql-connector.jar=C:\\Users\\2ndyrGroupB\\Documents\\NetBeansProjects\\javafinalproject\\mysql-connector.jar
-user.properties.file=C:\\Users\\2ndyrGroupB\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+file.reference.mysql-connector.jar=C:\\Users\\2ndyrGroupA\\Documents\\NetBeansProjects\\javafinalproject\\mysql-connector.jar
+user.properties.file=C:\\Users\\2ndyrGroupA\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
